#1044 Introduce type switching